--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -3,6 +3,8 @@
 
 {% block content %}
 
+{% if not request.user.is_authenticated %}
+
 <div class="container-fluid mt-5">
     <div class="row justify-content-center">
         <div class="col-lg-4">
@@ -21,5 +23,7 @@
         </div>
     </div>
 </div>
+
+{% endif %}
 
 {% endblock %}
