--- a/templates/doctor_sign_up.html
+++ b/templates/doctor_sign_up.html
@@ -3,23 +3,24 @@
 
 {% block content %}
 
-<div class="container-fluid mt-5">
-    <div class="row justify-content-center">
-        <div class="col-lg-4">
-            <div class="card">
-                <div class="card-body">
-                    <h2>Doctor sign Up</h2>
-                    <hr>
-                    <form action="{% url 'doctor_register' %}" method="POST" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        {{ form.media }}
-                        {% bootstrap_form form %}
-                        <button type="submit" class="btn btn-warning btn-block">Sign Up</button>
-                    </form>
+{% if not request.user.is_authenticated %}
+    <div class="container-fluid mt-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h2>Doctor sign Up</h2>
+                        <hr>
+                        <form action="{% url 'doctor_register' %}" method="POST" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            {{ form.media }}
+                            {% bootstrap_form form %}
+                            <button type="submit" class="btn btn-warning btn-block">Sign Up</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
+{% endif %}
 {% endblock %}
