--- a/templates/home.html
+++ b/templates/home.html
@@ -53,12 +53,12 @@
                         <div class="card-body">
                             <div class="list-group">
                                 {% for post in blog_posts %}
-                                    <a href="{% url 'blog:detail_post' %}" class="list-group-item list-group-item-action flex-column align-items-start bg-warning text-black">
+                                    <a href="{% url 'blog:detail_post' post.slug %}" class="list-group-item list-group-item-action flex-column align-items-start bg-warning text-black">
                                         <div class="d-flex w-100 justify-content-between">
                                             <h5 class="mb-1">{{post.title}}</h5>
                                             <small>{{ post.date_published }}</small>
                                         </div>
-                                        <p class="mb-1">{{post.content|safe|truncatechars:120}}</p>
+                                        <p class="mb-1">{{post.summery|safe|truncatechars:120}}</p>
                                     </a>
                                     <hr>
                                 {% endfor %}
@@ -66,7 +66,9 @@
                         </div>
                     </div>
                     {% else %}
+                        {% if request.user.is_doctor %}
                         <p>You Have no Post Create a post <a href="{% url 'blog:create_post' %}">here</a></p>
+                        {% endif %}
                     {% endif %}
                 </div>
             </div>
