--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,10 @@
         {% else %}
         <form action="" class="form-inline">
             <span class="mr-4" >{{ request.user.get_full_name|title }}</span>
-            <a href="{% url 'logout' %}" class="btn btn-outline-dark">Sign Out</a>
+            {% if request.user.is_patient %}
+            <a href="{% url 'all_doctor' %}" class="btn btn-outline-dark mr-1">All Doctors</a>
+            {% endif %}
+            <a href="{% url 'logout' %}" class="btn btn-outline-dark mr-1" >Sign Out</a>
         </form>
 
         {% endif %}
