Added Appointment list for doctors

--- a/templates/create_appointment.html
+++ b/templates/create_appointment.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
-{% block title %}Create Blog{% endblock title %}
+{% block title %}Book Appointment{% endblock title %}
 
 {% block content %}
 
@@ -26,9 +26,7 @@
                 {% bootstrap_form form %}
   
                 <!-- Submit btn -->
-                <button class="submit-button btn btn-lg btn-warning btn-block" type="submit">POST</button>
-                
-
+                <button class="submit-button btn btn-lg btn-warning btn-block" type="submit">BOOK Appointment</button>
               </form>	
           </div>
       </div>
