--- a/templates/appointment_list.html
+++ b/templates/appointment_list.html
@@ -25,26 +25,23 @@
         </div>
         <div class="container bg-light mt-4 pt-3 pb-3">
                 <div class="col-lg-8">
-                    <b class="text-secondary">All Doctors</b><br>
-                    {% if user.is_patient %}
+                    <b class="text-secondary">All Appointment for DR.{{request.user.get_full_name}}</b><br>
+                    {% if user.is_doctor %}
                     <div class="card bg-white mt-2 mb-5">
                         <div class="card-body">
                             <div class="list-group">
-                                {% for doctor in all_doctors %}
-                                {% if doctor.is_doctor %}
-                                    <div class="col-rg-10 mg-4">
-                                        <div class="card">
-                                            <div class="card-body">
-                                                <img src="{{doctor.profile.url}}" alt="Doctor Image" class="rounded-circle mb-2" width="150" height="150">
-                                                <hr>
-                                                <h5>Name: {{doctor.get_full_name}}</h5>
-                                                <h5>E-Mail: {{doctor.email}}</h5>
-                                                <a class="btn btn-warning mr-1 mt-2" href="{% url 'appointment:create_appontment' %}">Book Appointment</a>
-                                            </div>
+                                {% for apt in appointment %}
+                                <div class="col-rg-10 mg-4">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h5>Name: {{apt.appointment_user.get_full_name}}</h5>
+                                            <h5>Required Speciality: {{apt.required_speciality}}</h5>
+                                            <h5>Date of Appointment: {{apt.date_of_Appointment}}</h5>
+                                            <h5>Start Time of Appointment: {{apt.start_Time_of_Appointment}}</h5>
                                         </div>
                                     </div>
-                                    <hr>
-                                {% endif %}
+                                </div>
+                                <hr>
                                 {% endfor %}
                             </div>
                         </div>
