--- a/templates/base.html
+++ b/templates/base.html
@@ -22,9 +22,15 @@
         {% else %}
         <form action="" class="form-inline">
             <span class="mr-4" >{{ request.user.get_full_name|title }}</span>
+
             {% if request.user.is_patient %}
-            <a href="{% url 'all_doctor' %}" class="btn btn-outline-dark mr-1">All Doctors</a>
+            <a href="{% url 'doctor_list' %}" class="btn btn-outline-dark mr-1">All Doctors</a>
             {% endif %}
+            
+            {% if request.user.is_doctor %}
+            <a href="{% url 'appointment:appointment_list' %}" class="btn btn-outline-dark mr-1">All Appointment</a>
+            {% endif %}
+
             <a href="{% url 'logout' %}" class="btn btn-outline-dark mr-1" >Sign Out</a>
         </form>
 
